--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,10 +6,11 @@
     <title>REST Blog</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app" class="container-fluid"></div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
     <script src="js/public_constants.js"></script>
     <script type="module" src="js/main.js"></script>
 </body>
